force-app/main/default/objects/SLA_Compliance__c/SLA_Compliance__c.object-meta.xml
<CustomObject>
    <label>SLA Compliance</label>
    <pluralLabel>SLA Compliance</pluralLabel>
    <nameField>
        <displayFormat>SLA-{0000}</displayFormat>
        <label>SLA Compliance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>