force-app/main/default/objects/SLA_Compliance__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Compliance Records</relationshipLabel>
    <relationshipName>Compliance_Records</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>