force-app/main/default/objects/SLA_Compliance__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Compliance Records</relationshipLabel>
    <relationshipName>Entitlement_Compliance_Records</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>