force-app/main/default/objects/SLA_Compliance__c/fields/Is_Breached__c.field-meta.xml
<CustomField>
    <fullName>Is_Breached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Breached</label>
    <type>Checkbox</type>
</CustomField>